# CostaRica

./: README.md
.github/workflows/: forse-s3-sync.yaml  upload-to-s3.yaml
extensions/cyberfuel_facturaprofesional_import_invoices/: CMakeLists.txt  ch.banana.costarica.import.cyberfuel.facturaprofesional.classes.js  ch.banana.costarica.import.cyberfuel.facturaprofesional.js  ch.banana.costarica.import.cyberfuel.facturaprofesional.manifest.json  ch.banana.costarica.import.cyberfuel.facturaprofesional.qrc  readme.md  (+1 more)
extensions/importApps/Promerica/: CMakeLists.txt  ch.banana.costarica.import.statement.promerica.js  ch.banana.costarica.import.statement.promerica.manifest.json  ch.banana.costarica.import.statement.promerica.qrc  ch.banana.costarica.import.statement.promerica.sbaa
extensions/importApps/Promerica/test/: ch.banana.costarica.import.statement.promerica.test.js
extensions/importApps/Promerica/test/files/: InformaciondelaCuentadeAhorroCorriente USD_1804266915.xls  InformaciondelaCuentadeAhorroCorriente_1804266915.xls  InformaciondelaTarjetadeCredito_1429034537.xls
extensions/importApps/Promerica/test/testcases/: csv_from_excel_promerica_example_format1_CRC_20250508.csv
extensions/importApps/Promerica/test/testexpected/ch.banana.costarica.import.statement.promerica.test/: csv_from_excel_promerica_example_format1_CRC_20250508.txt  csv_promerica_example_format1_CRC_20250508.txt  csv_promerica_example_format1_USD_20250508.txt
templates/: ejemplo_multi-moneda_con_IVA.ac2  libro_de_caja_regimen_semplificado.ac2  libro_de_caja_régimen_semplificado.ac2
(+118 files in other folders)
